# ClosetManager

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  implementation-criteria.md  package-lock.json  pyproject.toml  pytest.ini
.github/workflows/: ci-cd.yml
Docs/: approach.md  implementation-plan.md  mvp-plan-old.md  mvp-plan.md  mvp-requirements.md  project-requirements.md  requirements.md  requirements.txt  tech-stack.md
backend/: .env  main.py  requirements.txt
backend/api/v1/: auth.py  items.py  outfits.py  upload.py
backend/config/: database.py  settings.py  upload_settings.py
backend/database/: __init__.py  postgresql.py
backend/models/: abstract_base_model.py  base.py  clothing_item.py  clothing_item_model.py  outfit.py  user.py
backend/schemas/: auth.py  clothing_item.py  user.py
backend/services/: auth_service.py  collection_service.py  item_service.py  outfit_service.py  upload_service.py
backend/tests/: conftest.py
backend/tests/test_api/: test_auth_api.py  test_items_api.py
backend/tests/test_models/: test_base_model.py  test_clothing_item.py  test_clothing_item_model.py  test_database_integration.py  test_database_integration_model.py  test_user.py  test_user_model.py
backend/tests/test_schemas/: test_auth_schema.py  test_clothing_item_schema.py  test_user_schema.py
backend/tests/test_services/: test_auth_service.py  test_item_service.py  test_upload_service.py
frontend/closet-manager/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config  tsconfig.json  vite.config.ts
(+34 files in other folders)
